--- a/.github/workflows/add_time.yml
+++ b/.github/workflows/add_time.yml
@@ -1,9 +1,10 @@
 name: 自动增加服务器时间
 
 on:
-  workflow_dispatch: 
+  workflow_dispatch: # 允许在 Actions 页面手动触发此工作流，方便测试
   schedule:
-    - cron: '0 */6 * * *' # 每 6 小时执行一次
+    # '0 */6 * * *' 表示每 6 小时执行一次
+    - cron: '0 */6 * * *'
 
 jobs:
   add_time:
@@ -21,10 +22,10 @@ jobs:
         with:
           python-version: '3.x' 
 
-      - name: Install Playwright and dependencies # <-- 【【【 这里是修改点 】】】
+      - name: Install Playwright and dependencies # <-- 【【【 这里有重要修改 】】】
         run: |
-          pip install playwright
-          playwright install --with-deps firefox # 安装 Firefox 浏览器及其依赖
+          pip install playwright playwright-stealth # 额外安装 stealth 库
+          playwright install --with-deps chromium # 换回 chromium
 
       - name: Run Time Adder Script 
         env:
