--- a/.github/workflows/add_time.yml
+++ b/.github/workflows/add_time.yml
@@ -16,13 +16,16 @@ jobs:
       - name: Checkout repository 
         uses: actions/checkout@v4
 
-      - name: Set up Python # <-- 【【【 这里是核心修改 】】】
+      - name: Set up Python 
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12' # 指定一个稳定的 Python 版本，而不是 '3.x'
+          python-version: '3.12' # 保持稳定的 Python 3.12
 
-      - name: Install Playwright and dependencies # (保持 --upgrade 不变)
+      - name: Install Playwright and dependencies # <-- 【【【 这里是核心修改 】】】
         run: |
+          python -m pip install --upgrade pip
+          pip cache purge
+          pip uninstall -y playwright-stealth || true
           pip install --upgrade playwright playwright-stealth 
           playwright install --with-deps chromium 
 
